--- a/components/h2pas/h2pasdlg.lfm
+++ b/components/h2pas/h2pasdlg.lfm
@@ -16,11 +16,11 @@ object H2PasDialog: TH2PasDialog
   Top = 205
   Width = 785
   object MainPageControl: TPageControl
-    ActivePage = ConvertTabSheet
+    ActivePage = h2pasOptionsTabSheet
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     TabIndex = 2
-    TabOrder = 0
+    TabOrder = 4
     TabStop = True
     AnchorSideBottom.Control = OpenSettingsButton
     Height = 465
@@ -103,6 +103,24 @@ object H2PasDialog: TH2PasDialog
         Left = 255
         Height = 435
         Width = 5
+      end
+    end
+    object PreH2PasTabSheet: TTabSheet
+      Caption = 'PreH2PasTabSheet'
+      ClientHeight = 435
+      ClientWidth = 781
+      Left = 2
+      Height = 435
+      Top = 28
+      Width = 781
+      object PreH2PasGroupBox: TGroupBox
+        Align = alClient
+        Caption = 'PreH2PasGroupBox'
+        ClientHeight = 435
+        ClientWidth = 781
+        TabOrder = 0
+        Height = 435
+        Width = 781
       end
     end
     object h2pasOptionsTabSheet: TTabSheet
@@ -226,395 +244,6 @@ object H2PasDialog: TH2PasDialog
         Width = 768
       end
     end
-    object ConvertTabSheet: TTabSheet
-      Caption = 'ConvertTabSheet'
-      ClientHeight = 435
-      ClientWidth = 781
-      Left = 2
-      Height = 435
-      Top = 28
-      Width = 781
-      object ConvertButton: TButton
-        AutoSize = True
-        BorderSpacing.InnerBorder = 4
-        Caption = 'ConvertButton'
-        OnClick = ConvertButtonClick
-        TabOrder = 0
-        Left = 6
-        Height = 26
-        Top = 396
-        Width = 93
-      end
-      object ConvertErrorGroupBox: TGroupBox
-        Anchors = [akTop, akLeft, akRight]
-        Caption = 'ConvertErrorGroupBox'
-        ClientHeight = 130
-        ClientWidth = 764
-        TabOrder = 1
-        AnchorSideTop.Control = ConvertUpDownSplitter
-        AnchorSideTop.Side = asrBottom
-        Left = 6
-        Height = 147
-        Top = 217
-        Width = 768
-        object ConvertErrorSynEdit: TSynEdit
-          Align = alClient
-          Font.Height = -12
-          Font.Name = 'courier'
-          Height = 130
-          Name = 'ConvertErrorSynEdit'
-          ParentColor = False
-          TabOrder = 0
-          Width = 764
-          BookMarkOptions.Xoffset = 30
-          Gutter.ShowLineNumbers = True
-          Gutter.CodeFoldingWidth = 14
-          Highlighter = SynCppSyn1
-          Keystrokes = <          
-            item
-              Command = 3
-              ShortCut = 38
-            end          
-            item
-              Command = 103
-              ShortCut = 8230
-            end          
-            item
-              Command = 211
-              ShortCut = 16422
-            end          
-            item
-              Command = 4
-              ShortCut = 40
-            end          
-            item
-              Command = 104
-              ShortCut = 8232
-            end          
-            item
-              Command = 212
-              ShortCut = 16424
-            end          
-            item
-              Command = 1
-              ShortCut = 37
-            end          
-            item
-              Command = 101
-              ShortCut = 8229
-            end          
-            item
-              Command = 5
-              ShortCut = 16421
-            end          
-            item
-              Command = 105
-              ShortCut = 24613
-            end          
-            item
-              Command = 2
-              ShortCut = 39
-            end          
-            item
-              Command = 102
-              ShortCut = 8231
-            end          
-            item
-              Command = 6
-              ShortCut = 16423
-            end          
-            item
-              Command = 106
-              ShortCut = 24615
-            end          
-            item
-              Command = 10
-              ShortCut = 34
-            end          
-            item
-              Command = 110
-              ShortCut = 8226
-            end          
-            item
-              Command = 14
-              ShortCut = 16418
-            end          
-            item
-              Command = 114
-              ShortCut = 24610
-            end          
-            item
-              Command = 9
-              ShortCut = 33
-            end          
-            item
-              Command = 109
-              ShortCut = 8225
-            end          
-            item
-              Command = 13
-              ShortCut = 16417
-            end          
-            item
-              Command = 113
-              ShortCut = 24609
-            end          
-            item
-              Command = 7
-              ShortCut = 36
-            end          
-            item
-              Command = 107
-              ShortCut = 8228
-            end          
-            item
-              Command = 15
-              ShortCut = 16420
-            end          
-            item
-              Command = 115
-              ShortCut = 24612
-            end          
-            item
-              Command = 8
-              ShortCut = 35
-            end          
-            item
-              Command = 108
-              ShortCut = 8227
-            end          
-            item
-              Command = 16
-              ShortCut = 16419
-            end          
-            item
-              Command = 116
-              ShortCut = 24611
-            end          
-            item
-              Command = 223
-              ShortCut = 45
-            end          
-            item
-              Command = 201
-              ShortCut = 16429
-            end          
-            item
-              Command = 604
-              ShortCut = 8237
-            end          
-            item
-              Command = 502
-              ShortCut = 46
-            end          
-            item
-              Command = 603
-              ShortCut = 8238
-            end          
-            item
-              Command = 501
-              ShortCut = 8
-            end          
-            item
-              Command = 501
-              ShortCut = 8200
-            end          
-            item
-              Command = 504
-              ShortCut = 16392
-            end          
-            item
-              Command = 601
-              ShortCut = 32776
-            end          
-            item
-              Command = 602
-              ShortCut = 40968
-            end          
-            item
-              Command = 509
-              ShortCut = 13
-            end          
-            item
-              Command = 199
-              ShortCut = 16449
-            end          
-            item
-              Command = 201
-              ShortCut = 16451
-            end          
-            item
-              Command = 610
-              ShortCut = 24649
-            end          
-            item
-              Command = 509
-              ShortCut = 16461
-            end          
-            item
-              Command = 510
-              ShortCut = 16462
-            end          
-            item
-              Command = 503
-              ShortCut = 16468
-            end          
-            item
-              Command = 611
-              ShortCut = 24661
-            end          
-            item
-              Command = 604
-              ShortCut = 16470
-            end          
-            item
-              Command = 603
-              ShortCut = 16472
-            end          
-            item
-              Command = 507
-              ShortCut = 16473
-            end          
-            item
-              Command = 506
-              ShortCut = 24665
-            end          
-            item
-              Command = 601
-              ShortCut = 16474
-            end          
-            item
-              Command = 602
-              ShortCut = 24666
-            end          
-            item
-              Command = 301
-              ShortCut = 16432
-            end          
-            item
-              Command = 302
-              ShortCut = 16433
-            end          
-            item
-              Command = 303
-              ShortCut = 16434
-            end          
-            item
-              Command = 304
-              ShortCut = 16435
-            end          
-            item
-              Command = 305
-              ShortCut = 16436
-            end          
-            item
-              Command = 306
-              ShortCut = 16437
-            end          
-            item
-              Command = 307
-              ShortCut = 16438
-            end          
-            item
-              Command = 308
-              ShortCut = 16439
-            end          
-            item
-              Command = 309
-              ShortCut = 16440
-            end          
-            item
-              Command = 310
-              ShortCut = 16441
-            end          
-            item
-              Command = 351
-              ShortCut = 24624
-            end          
-            item
-              Command = 352
-              ShortCut = 24625
-            end          
-            item
-              Command = 353
-              ShortCut = 24626
-            end          
-            item
-              Command = 354
-              ShortCut = 24627
-            end          
-            item
-              Command = 355
-              ShortCut = 24628
-            end          
-            item
-              Command = 356
-              ShortCut = 24629
-            end          
-            item
-              Command = 357
-              ShortCut = 24630
-            end          
-            item
-              Command = 358
-              ShortCut = 24631
-            end          
-            item
-              Command = 359
-              ShortCut = 24632
-            end          
-            item
-              Command = 360
-              ShortCut = 24633
-            end          
-            item
-              Command = 231
-              ShortCut = 24654
-            end          
-            item
-              Command = 232
-              ShortCut = 24643
-            end          
-            item
-              Command = 233
-              ShortCut = 24652
-            end          
-            item
-              Command = 612
-              ShortCut = 9
-            end          
-            item
-              Command = 613
-              ShortCut = 8201
-            end          
-            item
-              Command = 250
-              ShortCut = 24642
-            end>
-          Lines.Strings = (
-            'ConvertErrorSynEdit'
-          )
-          Options = [eoAutoIndent, eoDragDropEditing, eoGroupUndo, eoShowScrollHint, eoShowSpecialChars, eoSmartTabDelete, eoSmartTabs, eoTabsToSpaces, eoTrimTrailingSpaces, eoBracketHighlight]
-          ReadOnly = True
-          Cursor = crIBeam
-          Height = 130
-          Width = 764
-        end
-      end
-      object ConvertUpDownSplitter: TSplitter
-        Align = alNone
-        Beveled = True
-        Cursor = crVSplit
-        Height = 5
-        Width = 781
-        ResizeAnchor = akBottom
-        Cursor = crVSplit
-        Left = -10
-        Height = 5
-        Top = 212
-        Width = 781
-      end
-    end
     object SettingsTabSheet: TTabSheet
       Caption = 'SettingsTabSheet'
       ClientHeight = 435
@@ -729,6 +358,21 @@ object H2PasDialog: TH2PasDialog
     Top = 470
     Width = 122
   end
+  object ConvertButton: TButton
+    AutoSize = True
+    BorderSpacing.Left = 15
+    BorderSpacing.InnerBorder = 4
+    Caption = 'ConvertButton'
+    OnClick = ConvertButtonClick
+    TabOrder = 0
+    AnchorSideLeft.Control = SaveSettingsButton
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = SaveSettingsButton
+    Left = 271
+    Height = 26
+    Top = 470
+    Width = 93
+  end
   object CloseButton: TButton
     Anchors = [akRight, akBottom]
     AutoSize = True
@@ -745,11 +389,5 @@ object H2PasDialog: TH2PasDialog
     Height = 26
     Top = 470
     Width = 81
-  end
-  object SynCppSyn1: TSynCppSyn
-    DefaultFilter = 'C++-Quelltexte (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh'
-    Enabled = False
-    left = 312
-    top = 80
   end
 end
